--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,43 @@
 ---
+import Grid from "../layouts/Grid.astro";
 
+export const icon = "🏠";
+export const title = "Home";
+export const index = 0;
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<Grid icon={icon}>
+	<p>hihi</p>
+	<p>hihi</p>
+	<p>hihi</p>
+	<p>hihi</p>
+	<p>hihi</p>
+	<p>hihi</p>
+	<p>hihi</p>
+	<p>hihi</p>
+	<p>hihi</p>
+	<p>hihi</p>
+	<p>hihi</p>
+	<p>hihi</p>
+	<p>hihi</p>
+	<p>hihi</p>
+	<p>hihi</p>
+	<p>hihi</p>
+	<p>hihi</p>
+	<p>hihi</p>
+	<p>hihi</p>
+	<p>hihi</p>
+	<p>hihi</p>
+	<p>hihi</p>
+	<p>hihi</p>
+	<p>hihi</p>
+	<p>hihi</p>
+	<p>hihi</p>
+	<p>hihi</p>
+	<p>hihi</p>
+	<p>hihi</p>
+	<p>hihi</p>
+	<p>hihi</p>
+	<p>hihi</p>
+	<p>hihi</p>
+</Grid>
