--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,1 +1,6 @@
-<p>Ein Futsi</p>
+<style>
+    p {
+        font-size: 8pt;
+    }
+</style>
+<p>In case you experience troubles viewing this site, please contact your local support hotline.</p>
