--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,6 +3,7 @@
     /* font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; */
     /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
     font-family: 'Courier New', Courier, monospace;
+    /* font-size: 12pt; */
 }
 
 @font-face {
