header and some stuff

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,4 +3,4 @@
         font-size: 8pt;
     }
 </style>
-<p>In case you experience troubles viewing this site, please contact your local support hotline.</p>
+<p>In case you're having trouble while viewing this site, please contact your local support hotline.</p>
