--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,7 +8,7 @@
 
 @font-face {
     font-family: 'DotMatrix';
-    src: url('/fonts/DOTMATRI.TTF') format('truetype');
+    src: url('/fonts/DotMatrix.woff') format('woff');
     font-weight: 400;
     font-style: normal;
     font-display: swap;
@@ -16,7 +16,7 @@
 
 @font-face {
     font-family: 'DotMatrixBold';
-    src: url('/fonts/DOTMBold.TTF') format('truetype');
+    src: url('/fonts/DotMatrixBold.woff') format('woff');
     font-weight: bold;
     font-style: normal;
     font-display: swap;
