--- a/src/components/Floater.astro
+++ b/src/components/Floater.astro
@@ -1,5 +1,6 @@
 ---
 import "../styles/global.css";
+import "../styles/animations.css"
 ---
 
 <script>
@@ -9,8 +10,13 @@ import "../styles/global.css";
         "Made with actual<br/>human tears!",
         "Pow!",
         "Intelligence free -<br/>artificial or otherwise!",
-        "Now in color!",
+        "<p style='all: inherit; color: green;'>Now in color!</p>",
         "???",
+        "Made with<br/>unicorn farts!",
+        "GMO free!",
+        "nyoom",
+        "no cookies :(",
+        "<p style='all: inherit; animation: spin 0.9s linear infinite'>WHEEEEEE!</p>",
     ];
 
     const i = Math.floor(Math.random() * sprueche.length);
@@ -19,18 +25,10 @@ import "../styles/global.css";
 </script>
 
 <style>
-    @keyframes bounce {
-        from {
-            scale: 90%;
-        }
-        to {
-            scale: 110%;
-        }
-    }
     #floater {
         position: absolute;
-        right: 2em;
-        top: 1.5em;
+        right: 0;
+        top: 0;
         rotate: 20deg;
         z-index: 1000;
         /* animation-name: bounce; */
@@ -39,9 +37,10 @@ import "../styles/global.css";
         animation-direction: alternate;
         animation-timing-function: ease-in-out;
     }
-    #floater > p {
+    #floater p {
         font-family: "DotMatrix";
         font-size: 15pt;
+        margin: 0;
     }
 </style>
 
