--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,8 +10,7 @@ export const index = 0;
 const fakten = await db.select().from(FaktDesTages);
 ---
 
-<Grid icon={icon}>
-	<Floater />
+<Grid icon={icon} addFloater={true}>
 	<p>Die Fakten sind:</p>
 	<ul>
 		{ fakten.map(({ fakt }) => <li>{fakt}</li>) }
