--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,5 @@
 ---
 import Grid from "../layouts/Grid.astro";
-import Floater from "../components/Floater.astro";
 import { db, FaktDesTages } from "astro:db";
 
 export const icon = "🏠";
@@ -10,7 +9,7 @@ export const index = 0;
 const fakten = await db.select().from(FaktDesTages);
 ---
 
-<Grid icon={icon} addFloater={true}>
+<Grid icon={icon} title={title} addFloater={true}>
 	<p>Die Fakten sind:</p>
 	<ul>
 		{ fakten.map(({ fakt }) => <li>{fakt}</li>) }
