The grid layout was ass

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,6 +9,7 @@ const numColors = 6;
 <style>
     .headingContainer {
         position: relative;
+        text-align: center;
     }
     .coolLine {
         width: 100%;
