--- a/src/components/BlogPageSection.astro
+++ b/src/components/BlogPageSection.astro
@@ -8,21 +8,28 @@ const entries = await db.select().from(BlogEntry)
     .where(eq(BlogEntry.section, section.id));
 
 ---
-    {section.title && <h2>{section.title}</h2>}
-    {
-        entries.map((entry) => <div>
-            {entry.title && <h3>{entry.title}</h3>}
-            {
-                (async () => {
-                    const pics = await db.select().from(Pic)
-                        .innerJoin(BlogEntryPics, eq(BlogEntryPics.pic, Pic.id))
-                        .where(and(eq(BlogEntryPics.blogEntry, entry.id), BlogEntryPics.featured));
+<style>
+h2 {
+    margin-top: 3em;
+    font-family: 'DotMatrix';
+}
+</style>
 
-                    const picPaths = pics.map(({ Pic }) => ({ path: Pic.basePath + Pic.name, title: Pic.alt}));
+{section.title && <h2>{section.title}</h2>}
+{
+    entries.map((entry) => <div>
+        {entry.title && <h3>{entry.title}</h3>}
+        <p><em>Datum: {entry.date.toLocaleDateString()}</em></p>
+        {
+            (async () => {
+                const pics = await db.select().from(Pic)
+                    .innerJoin(BlogEntryPics, eq(BlogEntryPics.pic, Pic.id))
+                    .where(and(eq(BlogEntryPics.blogEntry, entry.id), BlogEntryPics.featured));
 
-                    return <ImageScrollGallery images={picPaths} />
-                })()
-            }
-            <p><em>Datum: {entry.date.toLocaleDateString()}</em></p>
-        </div>)
-    }
+                const picPaths = pics.map(({ Pic }) => ({ path: Pic.basePath + Pic.name, title: Pic.alt}));
+
+                return <ImageScrollGallery images={picPaths} />
+            })()
+        }
+    </div>)
+}
