--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,16 @@
 <style>
+    .footer {
+        margin-top: 1em;
+        margin-bottom: 2em;
+        border-top: 1px dashed black;
+        padding: 1em;
+    }
     p {
         font-size: 8pt;
+        width: 80%;
+        margin: auto;
     }
 </style>
-<p>In case you're having trouble while viewing this site, please contact your local support hotline.</p>
+<div class="footer">
+    <p>In case you're having trouble while viewing this site, please contact your local support hotline.</p>
+</div>
