--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,11 +6,12 @@
         padding: 1em;
     }
     p {
-        font-size: 8pt;
+        font-size: 10pt;
         width: 80%;
         margin: auto;
     }
 </style>
 <div class="footer">
-    <p>In case you're having trouble while viewing this site, please contact your local support hotline.</p>
+    <!-- <p>In case you're having trouble while viewing this site, please contact your local support hotline.</p> -->
+    <p>This website is <a href="https://github.com/hensing1/hensing1.website">open source</a>!</p>
 </div>
