--- a/src/pages/blog/[page].astro
+++ b/src/pages/blog/[page].astro
@@ -23,7 +23,8 @@ let sections = await db.select().from(BlogSection)
 <style>
     h1 {
         text-align: center;
-        border-bottom: 1px solid black;
+        border: 1px solid black;
+        border-radius: 1em;
         /* font-family: 'DotMatrix'; */
     }
     #back {
