why does color theory is so hard :(

--- a/src/components/ToolbarItem.astro
+++ b/src/components/ToolbarItem.astro
@@ -16,7 +16,8 @@ const isCurrentPage = link == Astro.url.pathname;
         border-radius: 1em;
         margin-bottom: 1em;
 
-        background-color: red;        
+        /* background-color: red; */
+        background-color: oklch(85% 0.3 30deg);
         color: black;
         box-shadow: 0.4em 0.4em;
         transition: 0.3s;
