--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,6 @@
 ---
-import '../styles/global.css';
-import Floater from './Floater.astro';
+import "../styles/global.css";
+import Floater from "./Floater.astro";
 
 const { addFloater } = Astro.props;
 const numColors = 6;
@@ -20,19 +20,19 @@ const numColors = 6;
 <div class="headingContainer">
     <h1><em>hensing1.website</em></h1>
     <!-- <div style="position: absolute; top: 0; right: 0; background: tomato">AAAAA</div> -->
-    { addFloater && <Floater /> }
+    {addFloater && <Floater />}
     <div class="coolLine">
         {
             Array.from(Array(numColors).keys()).map((index) => {
-                const deg = 30 + (180 / numColors) * index;
+                const deg = 30 + (130 / numColors) * index;
                 const style =
-                    `height: 100%;`+
+                    `height: 100%;` +
                     `width: ${100 / numColors}%;` +
                     `float:left;` +
-                    `background-color: oklch(80% 0.2577 ${deg}deg);` +
+                    `background-color: oklch(85% 0.3 ${deg}deg);` +
                     // `background-color: hsl(${deg}deg 70 50);` +
                     `transform: skew(-20deg);`;
-                return <div style={style}></div>
+                return <div style={style} />;
             })
         }
     </div>
