mobile-eventually design

--- a/src/components/ToolbarItem.astro
+++ b/src/components/ToolbarItem.astro
@@ -2,15 +2,15 @@
 const { icon, name, link } = Astro.props;
 const isCurrentPage = link == Astro.url.pathname;
 // const itemContent = `<div class="icon">${icon}</div><p class="name">${name}</p>`;
+
+const buttonScaleOnMobile = 1.15;
 ---
 
-<style>
+<style define:vars={{ buttonScaleOnMobile }}>
     .toolbarItem {
         /* margin: auto; */
         text-align: center;
-        /* min-width: 10em; */
-        /* max-width: 15em; */
-        width: 2em;
+        min-width: 10em;
         height: 2em;
         line-height: 2em;
         border-radius: 1em;
@@ -21,13 +21,11 @@ const isCurrentPage = link == Astro.url.pathname;
         color: black;
         box-shadow: 0.4em 0.4em;
         transition: 0.3s;
-        
+
         /* Text non-selectable */
-        -webkit-user-select: none; /* Safari */
-        -ms-user-select: none; /* IE 10 and IE 11 */
-        user-select: none; /* Standard syntax */
+        user-select: none;
     }
-    
+
     .toolbarItem.current {
         /* filter: brightness(95%); */
         transform: translate(0.2em, 0.2em);
@@ -39,14 +37,20 @@ const isCurrentPage = link == Astro.url.pathname;
         box-shadow: 0.57em 0.57em;
     }
 
-    .toolbarItem .name {
-        display: none;
+    .toolbarItem .icon {
+        position: absolute;
+        margin-left: 1em;
+        width: 1em;
     }
-    
+
+    .toolbarItem .name {
+        display: inline;
+    }
+
     p {
         margin: 0;
     }
-    
+
     a {
         display: block;
         width: 100%;
@@ -54,31 +58,44 @@ const isCurrentPage = link == Astro.url.pathname;
         text-decoration: none;
         color: inherit;
     }
-    
-    @media screen and (min-width: 636px) {
-        
+
+    @media screen and (max-width: 636px) {
         .toolbarItem {
-            min-width: 10em;
-            max-width: 15em;
+            min-width: unset;
+            width: 3.2em;
+            transform: scale(var(--buttonScaleOnMobile));
         }
 
-        .toolbarItem .icon {
-            position: absolute;
-            margin-left: 1em;
-            width: 1em;
+        .toolbarItem.current {
+            transform: translate(0.2em, 0.2em) scale(var(--buttonScaleOnMobile));
         }
-    
 
-        .toolbarItem .name{
-            display: inline;
+        .toolbarItem:not(.current):hover {
+            transform: translate(-0.17em, -0.17em)
+                scale(var(--buttonScaleOnMobile));
+        }
+
+        .toolbarItem .name {
+            display: none;
         }
     }
 </style>
 
 <div class=`toolbarItem ${isCurrentPage ? "current": ""}`>
     {
-        isCurrentPage ? 
-            <div class="icon">{icon}</div><p class="name">{name}</p> :
-            <a href={link}><div class="icon">{icon}</div><p class="name">{name}</p></a>
+        isCurrentPage ? (
+            <>
+                <div class="icon">{icon}</div>
+                <p class="name">{name}</p>
+            </>
+        ) : (
+            <a href={link}>
+                <>
+                    <div class="icon">{icon}</div>
+                    <p class="name">{name}</p>
+                </>
+            </a>
+        )
     }
 </div>
+
