the blog is now a photoblog

--- a/src/pages/photoblog.astro
+++ b/src/pages/photoblog.astro
@@ -2,10 +2,8 @@
 import BaseLayout from "../layouts/BaseLayout.astro";
 import Masonry from "../components/ImageMasonry.astro";
 
-import { db, eq, Pic, BlogPageFeature } from "astro:db";
-
-export const icon = "👋";
-export const title = "Blog";
+export const icon = "📸";
+export const title = "Photoblog";
 export const index = 1;
 
 const featuredImages = await db
@@ -45,7 +43,7 @@ const images = featuredImages.map(({ Pic }) => ({
     <h2>Aktuell</h2>
     <p class="text-with-button">
         Hi ich bin in Kanada!!!
-        <a href="/blog/Kanada" class="redlink">zur Blogseite -&gt;</a>
+        <a href="/photoblog/Kanada" class="redlink">zur Blogseite -&gt;</a>
     </p>
 
     <!-- sorry -->
