did you brush your teeth today?

--- a/src/components/Floater.astro
+++ b/src/components/Floater.astro
@@ -1,6 +1,6 @@
 ---
 import "../styles/global.css";
-import "../styles/animations.css"
+import "../styles/animations.css";
 ---
 
 <script>
@@ -17,6 +17,7 @@ import "../styles/animations.css"
         "nyoom",
         "no cookies :(",
         "<p style='all: inherit; animation: spin 0.9s linear infinite'>WHEEEEEE!</p>",
+        "Sponsored by Elmex©",
     ];
 
     const i = Math.floor(Math.random() * sprueche.length);
